--- a/index.html
+++ b/index.html
@@ -245,19 +245,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Erika 💝 Theresa</li>
-<li>Julian 💝 Nilani</li>
-<li>Liene 💝 Kristina</li>
-<li>Eva 💝 Cora</li>
-<li>Marina 💝 Kirstin</li>
-<li>Florian 💝 Martin</li>
+<li>Sarah 💝 Julian</li>
+<li>Nilani 💝 Martin</li>
+<li>Kristina 💝 Erika</li>
+<li>Christian 💝 Florian</li>
+<li>Eva 💝 Carolin</li>
+<li>Michael 💝 Cora</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Sarah 💝 Carolin</li>
-<li>Max 💝 Christian</li>
-<li>Michael 💝 Johanna</li>
-<li>Fabian 💝 NA</li>
+<li>Kirstin 💝 Max</li>
+<li>Liene 💝 Marina</li>
+<li>Fabian 💝 Theresa</li>
+<li>Johanna 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -333,19 +333,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Erika 💝 Christian</li>
-<li>Nilani 💝 Sarah</li>
-<li>Michael 💝 Kristina</li>
-<li>Johanna 💝 Eva</li>
-<li>Martin 💝 Cora</li>
-<li>Liene 💝 Carolin</li>
+<li>Michael 💝 Theresa</li>
+<li>Christian 💝 Kristina</li>
+<li>Julian 💝 Eva</li>
+<li>Cora 💝 Marina</li>
+<li>Martin 💝 Carolin</li>
+<li>Max 💝 Florian</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Marina 💝 Julian</li>
-<li>Max 💝 Theresa</li>
-<li>Florian 💝 Fabian</li>
-<li>Kirstin 💝 NA</li>
+<li>Erika 💝 Kirstin</li>
+<li>Nilani 💝 Fabian</li>
+<li>Sarah 💝 Johanna</li>
+<li>Liene 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -421,19 +421,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Sarah 💝 Carolin</li>
-<li>Johanna 💝 Theresa</li>
-<li>Eva 💝 Cora</li>
-<li>Nilani 💝 Michael</li>
-<li>Marina 💝 Fabian</li>
-<li>Julian 💝 Martin</li>
+<li>Max 💝 Fabian</li>
+<li>Kristina 💝 Johanna</li>
+<li>Liene 💝 Sarah</li>
+<li>Theresa 💝 Martin</li>
+<li>Michael 💝 Julian</li>
+<li>Christian 💝 Kirstin</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Kristina 💝 Kirstin</li>
-<li>Erika 💝 Liene</li>
-<li>Max 💝 Christian</li>
-<li>Florian 💝 NA</li>
+<li>Erika 💝 Nilani</li>
+<li>Marina 💝 Carolin</li>
+<li>Florian 💝 Eva</li>
+<li>Cora 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -515,19 +515,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Michael 💝 Kirstin</li>
-<li>Nilani 💝 Cora</li>
-<li>Fabian 💝 Erika</li>
-<li>Kristina 💝 Carolin</li>
-<li>Liene 💝 Marina</li>
-<li>Sarah 💝 Max</li>
+<li>Eva 💝 Theresa</li>
+<li>Johanna 💝 Cora</li>
+<li>Max 💝 Christian</li>
+<li>Martin 💝 Marina</li>
+<li>Sarah 💝 Michael</li>
+<li>Julian 💝 Liene</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Florian 💝 Theresa</li>
-<li>Eva 💝 Christian</li>
-<li>Martin 💝 Julian</li>
-<li>Johanna 💝 NA</li>
+<li>Kirstin 💝 Kristina</li>
+<li>Carolin 💝 Erika</li>
+<li>Florian 💝 Fabian</li>
+<li>Nilani 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
