--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ window.Quarto = {
       <div>
       <div class="quarto-title-meta-heading">Veröffentlichungsdatum</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">16. November 2025</p>
+        <p class="date">17. November 2025</p>
       </div>
     </div>
     
@@ -245,19 +245,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Sarah 💝 Julian</li>
-<li>Nilani 💝 Martin</li>
-<li>Kristina 💝 Erika</li>
-<li>Christian 💝 Florian</li>
-<li>Eva 💝 Carolin</li>
-<li>Michael 💝 Cora</li>
+<li>Sarah 💝 Theresa</li>
+<li>Michael 💝 Julian</li>
+<li>Marina 💝 Max</li>
+<li>Cora 💝 Martin</li>
+<li>Johanna 💝 Kirstin</li>
+<li>Kristina 💝 Christian</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Kirstin 💝 Max</li>
-<li>Liene 💝 Marina</li>
-<li>Fabian 💝 Theresa</li>
-<li>Johanna 💝 NA</li>
+<li>Florian 💝 Carolin</li>
+<li>Fabian 💝 Nilani</li>
+<li>Eva 💝 Liene</li>
+<li>Erika 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -333,19 +333,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Michael 💝 Theresa</li>
-<li>Christian 💝 Kristina</li>
-<li>Julian 💝 Eva</li>
-<li>Cora 💝 Marina</li>
-<li>Martin 💝 Carolin</li>
-<li>Max 💝 Florian</li>
+<li>Kirstin 💝 Florian</li>
+<li>Nilani 💝 Michael</li>
+<li>Julian 💝 Kristina</li>
+<li>Cora 💝 Carolin</li>
+<li>Martin 💝 Sarah</li>
+<li>Christian 💝 Theresa</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Erika 💝 Kirstin</li>
-<li>Nilani 💝 Fabian</li>
-<li>Sarah 💝 Johanna</li>
-<li>Liene 💝 NA</li>
+<li>Eva 💝 Max</li>
+<li>Erika 💝 Liene</li>
+<li>Johanna 💝 Marina</li>
+<li>Fabian 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -421,19 +421,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Max 💝 Fabian</li>
-<li>Kristina 💝 Johanna</li>
-<li>Liene 💝 Sarah</li>
-<li>Theresa 💝 Martin</li>
-<li>Michael 💝 Julian</li>
-<li>Christian 💝 Kirstin</li>
+<li>Max 💝 Kirstin</li>
+<li>Liene 💝 Marina</li>
+<li>Theresa 💝 Johanna</li>
+<li>Christian 💝 Eva</li>
+<li>Nilani 💝 Carolin</li>
+<li>Fabian 💝 Sarah</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Erika 💝 Nilani</li>
-<li>Marina 💝 Carolin</li>
-<li>Florian 💝 Eva</li>
-<li>Cora 💝 NA</li>
+<li>Martin 💝 Kristina</li>
+<li>Cora 💝 Julian</li>
+<li>Erika 💝 Florian</li>
+<li>Michael 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
@@ -515,19 +515,19 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Eva 💝 Theresa</li>
+<li>Kirstin 💝 Eva</li>
+<li>Kristina 💝 Michael</li>
+<li>Max 💝 Florian</li>
+<li>Martin 💝 Fabian</li>
+<li>Julian 💝 Christian</li>
 <li>Johanna 💝 Cora</li>
-<li>Max 💝 Christian</li>
-<li>Martin 💝 Marina</li>
-<li>Sarah 💝 Michael</li>
-<li>Julian 💝 Liene</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Kirstin 💝 Kristina</li>
+<li>Nilani 💝 Liene</li>
+<li>Theresa 💝 Marina</li>
 <li>Carolin 💝 Erika</li>
-<li>Florian 💝 Fabian</li>
-<li>Nilani 💝 NA</li>
+<li>Sarah 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 </ul>
