Update publication date, abstract wording, partner lists, and add custom banner styling with new SVG images

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ window.Quarto = {
       <div>
       <div class="quarto-title-meta-heading">Veröffentlichungsdatum</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">17. November 2025</p>
+        <p class="date">18. November 2025</p>
       </div>
     </div>
     
@@ -161,7 +161,7 @@ window.Quarto = {
   <div>
     <div class="abstract">
       <div class="block-title">Zusammenfassung</div>
-      Ausgehend von der grundlegenden Unterscheidung deskriptiver, explanativer und explorativer Forschungsfragen, wollen wir einen Blick auch die Gemeinsamkeiten und Unterschiede Bayesesianischer und frequentischer Schätz- und Testmethoden werfen
+      Ausgehend von der grundlegenden Unterscheidung deskriptiver, explanativer und explorativer Forschungsfragen, wollen wir einen Blick auf die Gemeinsamkeiten und Unterschiede Bayesianischer und frequentischer Schätz- und Testmethoden werfen
     </div>
   </div>
   
@@ -259,18 +259,18 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Michael 💝 Johanna</li>
-<li>Nilani 💝 Max</li>
-<li>Marina 💝 Martin</li>
-<li>Florian 💝 Sarah</li>
-<li>Carolin 💝 Eva</li>
-<li>Erika 💝 Kristina</li>
+<li>Nilani 💝 Johanna</li>
+<li>Sarah 💝 Florian</li>
+<li>Cora 💝 Liene</li>
+<li>Carolin 💝 Max</li>
+<li>Christian 💝 Erika</li>
+<li>Fabian 💝 Michael</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Christian 💝 Fabian</li>
-<li>Theresa 💝 Liene</li>
-<li>Kirstin 💝 Cora</li>
+<li>Eva 💝 Kirstin</li>
+<li>Kristina 💝 Martin</li>
+<li>Marina 💝 Theresa</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
@@ -347,18 +347,18 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Michael 💝 Max</li>
-<li>Kirstin 💝 Cora</li>
-<li>Erika 💝 Florian</li>
-<li>Johanna 💝 Sarah</li>
-<li>Marina 💝 Kristina</li>
-<li>Carolin 💝 Liene</li>
+<li>Kristina 💝 Christian</li>
+<li>Nilani 💝 Erika</li>
+<li>Michael 💝 Liene</li>
+<li>Max 💝 Theresa</li>
+<li>Kirstin 💝 Martin</li>
+<li>Johanna 💝 Fabian</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Christian 💝 Eva</li>
-<li>Martin 💝 Fabian</li>
-<li>Theresa 💝 Nilani</li>
+<li>Cora 💝 Marina</li>
+<li>Sarah 💝 Florian</li>
+<li>Eva 💝 Carolin</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
@@ -435,18 +435,18 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Florian 💝 Marina</li>
-<li>Sarah 💝 Max</li>
-<li>Theresa 💝 Michael</li>
-<li>Christian 💝 Carolin</li>
-<li>Liene 💝 Fabian</li>
-<li>Erika 💝 Kirstin</li>
+<li>Kirstin 💝 Liene</li>
+<li>Eva 💝 Nilani</li>
+<li>Marina 💝 Fabian</li>
+<li>Theresa 💝 Kristina</li>
+<li>Christian 💝 Max</li>
+<li>Carolin 💝 Cora</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Nilani 💝 Cora</li>
+<li>Erika 💝 Florian</li>
 <li>Martin 💝 Johanna</li>
-<li>Kristina 💝 Eva</li>
+<li>Michael 💝 Sarah</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
@@ -529,18 +529,18 @@ window.Quarto = {
 <div class="columns">
 <div class="column" style="width:50%;">
 <ul>
-<li>Fabian 💝 Marina</li>
-<li>Kirstin 💝 Carolin</li>
-<li>Liene 💝 Johanna</li>
-<li>Christian 💝 Florian</li>
-<li>Max 💝 Nilani</li>
-<li>Erika 💝 Eva</li>
+<li>Fabian 💝 Michael</li>
+<li>Kristina 💝 Max</li>
+<li>Nilani 💝 Theresa</li>
+<li>Cora 💝 Johanna</li>
+<li>Kirstin 💝 Florian</li>
+<li>Liene 💝 Eva</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <ul>
-<li>Cora 💝 Martin</li>
-<li>Sarah 💝 Theresa</li>
-<li>Kristina 💝 Michael</li>
+<li>Carolin 💝 Sarah</li>
+<li>Martin 💝 Marina</li>
+<li>Erika 💝 Christian</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
 <li>NA 💝 NA</li>
@@ -640,6 +640,18 @@ window.Quarto = {
 <div class="column-page-right">
 <iframe width="100%" height="900" src="app3.html" title="Bayes factor App 1"></iframe>
 </div>
+<style>
+.quarto-title-block .quarto-title-banner {
+  background-image: url(img/ifeblogoweiss.svg);
+  background-size: 150px;
+  background-position: left;
+  background-repeat: no-repeat;
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-origin: content-box;
+}
+</style>
 </section>
 </section>
 <section id="literatur" class="level2 unnumbered">
